tests/good/syntax/085-char-and-string-in-block-comment.clap
val x = 42
(*
    val y = '"' " *) *) "
*)
