tests/bad/lexical/092-where-no-val.clap
val x = 42 where y = 12 end
